force-app/main/default/objects/Homepage_Widget__c/Homepage_Widget__c.object-meta.xml
<CustomObject>
    <label>Homepage Widget</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Homepage Widgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>