force-app/main/default/objects/Homepage_Widget__c/fields/Criteria_Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Filter_Logic__c</fullName>
    <label>Criteria Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>