force-app/main/default/objects/Homepage_Widget__c/fields/Lookup_Fields__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Fields__c</fullName>
    <label>Lookup Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>