force-app/main/default/objects/Homepage_Widget__c/fields/Preview__c.field-meta.xml
<CustomField>
    <fullName>Preview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preview</label>
    <type>Checkbox</type>
</CustomField>