force-app/main/default/objects/Homepage_Widget__c/listViews/Criteria.listView-meta.xml
<ListView>
    <fullName>Criteria</fullName>
    <columns>NAME</columns>
    <columns>Number__c</columns>
    <columns>Preview__c</columns>
    <columns>Criteria__c</columns>
    <columns>Criteria_Filter_Logic__c</columns>
    <filterScope>Everything</filterScope>
    <label>Criteria</label>
</ListView>